--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
@@ -11,6 +14,85 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <div class="container">
+    <header>
+      <img src="img/logo.png" alt="Great Idea! Company logo." class="logo">
+      <nav>
+        <a href="#">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>    
+      </nav>
+      <!-- src="img/logo.png" alt="Great Idea! Company logo.">-->
+    </header>
+
+    <section class="top-content">
+      <div class="tc-text">
+        <h1 class="inno">
+          <p>Innovation</p>
+          <p>On</p>
+          <p>Demand</p>
+        </h1>
+
+        <p><button>Get Started</button>
+          <p>
+      </div>
+      <div class="top-image"></div>
+      <!--<img src="img/header-img.png" alt="Image of a code snippet.">-->
+    </section>
+
+    <section class="main-content">
+      <div class="mc-top">
+        <div class="mc-top-1">
+          <h3>Features</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+
+        <div class="mc-top-2">
+          <h3>About</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </div>
+
+      <div class="mc-img"></div>
+      <!--<img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">-->
+
+      <div class="mc-bottom">
+        <div class="mcb-1">
+          <h3>Services</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+        <div class="mcb-2">
+          <h3>Product</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+        <div class="mcb-3">
+          <h3>Vision</h3>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+            Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </div>
+    </section>
+
+    <address>
+      <h3>Contact</h3>
+      <p>123 Way 456 Street</p>
+      <p>Somewhere, USA</p>
+      <p class="number">1 (888) 888-8888
+      </p>
+      <p>sales@greatidea.io</p>
+    </address>
+
+    <footer>
+      Copyright Great Idea! 2018
+    </footer>
 </body>
+
 </html>
