--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         </div>
       </div>
 
-      <div class="mc-img"></div>
-      <!--<img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">-->
+      <!-- <div class="mc-img"></div> -->
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
       <div class="mc-bottom">
         <div class="mcb-1">
